--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
   <title>vaadin-router Examples</title>
-  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+  <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
+  <link rel="import" href="demo-shell.html">
 
   <custom-style>
     <style include="vaadin-component-demo-shared-styles"></style>
@@ -12,15 +13,6 @@
 </head>
 
 <body>
-  <link rel="import" href="../../polymer/polymer.html">
-  <link rel="import" href="../../vaadin-demo-helpers/vaadin-component-demo.html">
-  <link rel="import" href="../../vaadin-demo-helpers/vaadin-demo-snippet.html">
-  <link rel="import" href="../../vaadin-demo-helpers/vaadin-demo-ready-event-emitter.html">
-
-  <link rel="import" href="element-demo.html">
-
-  <link rel="import" href="../vaadin-router.html">
-
   <vaadin-component-demo config-src="demos.json"></vaadin-component-demo>
 </body>
 </html>
