--- a/src/vaadin-router.html
+++ b/src/vaadin-router.html
@@ -32,7 +32,7 @@ This program is available under Apache License Version 2.0, available at https:/
        * ```
        *
        * @memberof Vaadin
-       * @demo demo/index.html
+       * @demo demo/
        */
       class VaadinRouter extends Vaadin.ThemableMixin(Polymer.Element) {
         static get is() {
