--- a/demo/element-basic-demos.html
+++ b/demo/element-basic-demos.html
@@ -7,12 +7,84 @@
     </style>
 
 
-    <h3>Sample example</h3>
-    <vaadin-demo-snippet id="element-basic-demos-sample-example">
+    <h3>Basic</h3>
+    <p>Use <code>&lt;vaadin-router-link&gt;</code> to create HTML5 links that change the browser URL
+      without page reload and <code>&lt;vaadin-route&gt;</code> to define what should be rendered for
+      a given route. Wrap all routes into a <code>&lt;vaadin-router&gt;</code> element.</p>
+    <vaadin-router-demo-snippet id="element-basic-demos-basic">
       <template preserve-content>
-        <vaadin-router>Foobar</vaadin-router>
+        <nav>
+          <vaadin-router-link href="home">Home</vaadin-router-link>
+          <vaadin-router-link href="about">About</vaadin-router-link>
+          <vaadin-router-link href="topics">Topics</vaadin-router-link>
+        </nav>
+        <vaadin-router>
+          <vaadin-route url="home">
+            <template>
+              <h1>Home</h1>
+            </template>
+          </vaadin-route>
+          <vaadin-route url="about">
+            <template>
+              <h1>About</h1>
+            </template>
+          </vaadin-route>
+          <vaadin-route url="topics">
+            <template>
+              <h1>Topics</h1>
+            </template>
+          </vaadin-route>
+        </vaadin-router>
       </template>
-    </vaadin-demo-snippet>
+    </vaadin-router-demo-snippet>
+
+    <h3>Highlight the link to the current route</h3>
+    <p>If the current route matches the target route of a <code>&lt;vaadin-router-link&gt;</code>,
+      the link gets the <code>active</code> attribute. Use this attribute in a CSS selector to style
+      the currently active link differently.</p>
+    <vaadin-router-demo-snippet id="element-basic-demos-styled-link">
+      <template preserve-content>
+        <style>
+          vaadin-router-link[active] {
+            color: darkblue;
+          }
+        </style>
+        <nav>
+          <vaadin-router-link href="home">Home</vaadin-router-link>
+          <vaadin-router-link href="about">About</vaadin-router-link>
+        </nav>
+        <vaadin-router>
+          <vaadin-route url="home">
+            <template>
+              <h1>Home</h1>
+            </template>
+          </vaadin-route>
+          <vaadin-route url="about">
+            <template>
+              <h1>About</h1>
+            </template>
+          </vaadin-route>
+        </vaadin-router>
+      </template>
+    </vaadin-router-demo-snippet>
+
+    <h3>Route parameters</h3>
+    <vaadin-router-demo-snippet id="element-basic-demos-parameters">
+      <template preserve-content>
+        <nav>
+          <vaadin-router-link href="sam">Sam</vaadin-router-link>
+          <vaadin-router-link href="jane">Jane</vaadin-router-link>
+          <vaadin-router-link href="kim">Kim</vaadin-router-link>
+        </nav>
+        <vaadin-router>
+          <vaadin-route url=":name">
+            <template>
+              Name: [[name]]
+            </template>
+          </vaadin-route>
+        </vaadin-router>
+      </template>
+    </vaadin-router-demo-snippet>
 
   </template>
   <script>
