--- a/vaadin-router.html
+++ b/vaadin-router.html
@@ -1,1 +1,56 @@
-<link rel="import" href="theme/lumo/vaadin-router.html">
+<!--
+@license
+Copyright (c) 2018 Vaadin Ltd.
+This program is available under Apache License Version 2.0, available at https://vaadin.com/license/
+-->
+
+<link rel="import" href="../polymer/polymer-element.html">
+
+<dom-module id="vaadin-router">
+  <template>
+    <style>
+      :host {
+        display: inline-block;
+      }
+
+      :host([hidden]) {
+        display: none !important;
+      }
+    </style>
+    <slot></slot>
+  </template>
+
+  <script>
+    (function() {
+
+      /**
+       * `<vaadin-router>` is a Polymer 2 element.
+       *
+       * ```
+       * <vaadin-router></vaadin-router>
+       * ```
+       *
+       * @memberof Vaadin
+       * @demo demo/
+       */
+      class VaadinRouter extends Polymer.Element {
+        static get is() {
+          return 'vaadin-router';
+        }
+
+        static get properties() {
+          return {
+          };
+        }
+      }
+
+      customElements.define(VaadinRouter.is, VaadinRouter);
+
+      /**
+       * @namespace Vaadin
+       */
+      window.Vaadin = window.Vaadin || {};
+      Vaadin.VaadinRouter = VaadinRouter;
+    })();
+  </script>
+</dom-module>
