get the first basic demo working
 - the vaadin-router-demo-snippet correctly shows the URL
 - vaadin-router-link is a new element for in-app links (changes `window.location` whithout network requests)
 - vaadin-route is a new element for route definitions (fetches the route content from an inline template)

Currently in-app URLs must start with a leading /.

--- a/demo/vaadin-router-demo-snippet.html
+++ b/demo/vaadin-router-demo-snippet.html
@@ -172,7 +172,6 @@
       }
 
       _onIframePopstate(pathname) {
-        console.log(`got a popstate from the iframe instance ${this._instance}: ${pathname}`);
         this.url = pathname;
       }
 
@@ -200,6 +199,8 @@
           return false;
         }
 
+        this._postIframeMessage({type: 'set-template', html: template.innerHTML});
+
         // Hide the use of window.addDemoReadyListener
         let snippet = this.$.marked.unindent(template.innerHTML)
           .replace(/window\.addDemoReadyListener\('[^{]+/g, `window.addEventListener('WebComponentsReady', function() `);
@@ -209,14 +210,9 @@
         snippet = snippet.replace(/ class=""/g, '');
 
         // Boolean properties are displayed as checked="", so remove the ="" bit.
-        snippet = snippet.replace(/=""/g, '');
+        snippet = snippet.replace(/href=""/g, 'href="__preserve_empty_hrefs__"')
+          .replace(/=""/g, '').replace(/href="__preserve_empty_hrefs__"/g, 'href=""');
         this._markdown = '```html\n' + snippet + '\n' + '```';
-
-        window.ShadyCSS.prepareTemplate(template, 'vaadin-router-demo-snippet-' + this._instance);
-        let dom = this.getRootNode().host._stampTemplate(template);
-        let body = document.createElement('body');
-        body.appendChild(dom);
-        this._postIframeMessage({type: 'set-template', html: body.innerHTML});
       }
 
       _copyToClipboard() {
