--- a/demo/demo-shell.html
+++ b/demo/demo-shell.html
@@ -7,3 +7,5 @@
 <link rel="import" href="element-demo.html">
 
 <link rel="import" href="../vaadin-router.html">
+<link rel="import" href="../vaadin-route.html">
+<link rel="import" href="../vaadin-router-link.html">
