--- a/demo/demo-shell.html
+++ b/demo/demo-shell.html
@@ -2,8 +2,8 @@
 <link rel="import" href="../../vaadin-demo-helpers/vaadin-component-demo.html">
 <link rel="import" href="../../vaadin-demo-helpers/vaadin-demo-snippet.html">
 <link rel="import" href="../../vaadin-demo-helpers/vaadin-demo-ready-event-emitter.html">
+<link rel="import" href="../../vaadin-demo-helpers/vaadin-demo-iframe-renderer-outlet.html">
 
-<link rel="import" href="vaadin-router-demo-snippet.html">
 <link rel="import" href="element-demo.html">
 
 <link rel="import" href="../vaadin-router.html">
