add support for route paramters (e.g. /users/:user)
The implementation is based on the MIT-licensed path-to-regexp library.
Features:
 - named parameters (e.g. /users/:user/messages/:messageId)
 - optional parameters marked with a `?` (e.g. /images/:size/:color? matches both /images/100x100 and /images/100x100/hotpink)
 - multi-segment parameters (zero or more marked with a `*`, one or more marked with a `+`) (e.g. /kb/:path+ matches /kb/general/insurance/personal and /kb/general)
 - regex patterns for parameter values (e.g. /icons/:width(\\d+)x:height(\\d+) matches /icons/96x96)
 - unnamed parameters (e.g. /users/(.*) matches /users/asdf)

--- a/demo/element-basic-demos.html
+++ b/demo/element-basic-demos.html
@@ -72,12 +72,12 @@
     <vaadin-demo-snippet id="element-basic-demos-parameters" iframe-src="iframe.html">
       <template preserve-content>
         <nav>
-          <vaadin-router-link href="sam">Sam</vaadin-router-link>
-          <vaadin-router-link href="jane">Jane</vaadin-router-link>
-          <vaadin-router-link href="kim">Kim</vaadin-router-link>
+          <vaadin-router-link href="/sam">Sam</vaadin-router-link>
+          <vaadin-router-link href="/jane">Jane</vaadin-router-link>
+          <vaadin-router-link href="/kim">Kim</vaadin-router-link>
         </nav>
         <vaadin-router>
-          <vaadin-route url=":name">
+          <vaadin-route url="/:name">
             <template>
               Name: [[name]]
             </template>
