--- a/demo/iframe.html
+++ b/demo/iframe.html
@@ -6,6 +6,15 @@
   <title>vaadin-router demo</title>
   <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
   <link rel="import" href="demo-shell.html">
+
+  <style>
+    vaadin-router-link {
+      display: inline-block;
+    }
+    vaadin-router-link:not(:last-child) {
+      margin-right: 1em;
+    }
+  </style>
 </head>
 
 <body>
