rename vaadin-route url property to path
- to decouple the route path from a URL because the path could have placeholders (which is not a valid URL)

--- a/demo/element-basic-demos.html
+++ b/demo/element-basic-demos.html
@@ -19,17 +19,17 @@
           <vaadin-router-link href="/topics">Topics</vaadin-router-link>
         </nav>
         <vaadin-router>
-          <vaadin-route url="/">
+          <vaadin-route path="/">
             <template>
               <h1>Home</h1>
             </template>
           </vaadin-route>
-          <vaadin-route url="/about">
+          <vaadin-route path="/about">
             <template>
               <h1>About</h1>
             </template>
           </vaadin-route>
-          <vaadin-route url="/topics">
+          <vaadin-route path="/topics">
             <template>
               <h1>Topics</h1>
             </template>
@@ -55,12 +55,12 @@
           <vaadin-router-link href="/about">About</vaadin-router-link>
         </nav>
         <vaadin-router>
-          <vaadin-route url="/">
+          <vaadin-route path="/">
             <template>
               <h1>Home</h1>
             </template>
           </vaadin-route>
-          <vaadin-route url="/about">
+          <vaadin-route path="/about">
             <template>
               <h1>About</h1>
             </template>
@@ -78,7 +78,7 @@
           <vaadin-router-link href="/kim">Kim</vaadin-router-link>
         </nav>
         <vaadin-router>
-          <vaadin-route url="/:name">
+          <vaadin-route path="/:name">
             <template>
               <p>Name: [[name]]</p>
             </template>
