--- a/vaadin-route.html
+++ b/vaadin-route.html
@@ -43,7 +43,7 @@ This program is available under Apache License Version 2.0, available at https:/
 
         static get properties() {
           return {
-            url: {
+            path: {
               type: String,
               observer: '_onPathChanged'
             },
