--- a/demo/element-basic-demos.html
+++ b/demo/element-basic-demos.html
@@ -19,17 +19,17 @@
           <vaadin-router-link href="/topics">Topics</vaadin-router-link>
         </nav>
         <vaadin-router>
-          <vaadin-route url="/">
+          <vaadin-route path="/">
             <template>
               <h1>Home</h1>
             </template>
           </vaadin-route>
-          <vaadin-route url="/about">
+          <vaadin-route path="/about">
             <template>
               <h1>About</h1>
             </template>
           </vaadin-route>
-          <vaadin-route url="/topics">
+          <vaadin-route path="/topics">
             <template>
               <h1>Topics</h1>
             </template>
@@ -45,8 +45,9 @@
     <vaadin-demo-snippet id="element-basic-demos-styled-link" iframe-src="iframe.html">
       <template preserve-content>
         <style>
-          vaadin-router-link:not([active]) {
-            text-decoration: none;
+          vaadin-router-link[active] {
+            font-weight: bold;
+            font-size: 120%;
           }
         </style>
         <nav>
@@ -54,12 +55,12 @@
           <vaadin-router-link href="/about">About</vaadin-router-link>
         </nav>
         <vaadin-router>
-          <vaadin-route url="/">
+          <vaadin-route path="/">
             <template>
               <h1>Home</h1>
             </template>
           </vaadin-route>
-          <vaadin-route url="/about">
+          <vaadin-route path="/about">
             <template>
               <h1>About</h1>
             </template>
@@ -72,14 +73,14 @@
     <vaadin-demo-snippet id="element-basic-demos-parameters" iframe-src="iframe.html">
       <template preserve-content>
         <nav>
-          <vaadin-router-link href="sam">Sam</vaadin-router-link>
-          <vaadin-router-link href="jane">Jane</vaadin-router-link>
-          <vaadin-router-link href="kim">Kim</vaadin-router-link>
+          <vaadin-router-link href="/sam">Sam</vaadin-router-link>
+          <vaadin-router-link href="/jane">Jane</vaadin-router-link>
+          <vaadin-router-link href="/kim">Kim</vaadin-router-link>
         </nav>
         <vaadin-router>
-          <vaadin-route url=":name">
+          <vaadin-route path="/:name">
             <template>
-              Name: [[name]]
+              <p>Name: [[name]]</p>
             </template>
           </vaadin-route>
         </vaadin-router>
