remove the dependency on Polymer.Element
The features of the Polymer 2 library that are still in use:
 - observe HTML attribute changes and deserialize JS property values out of them (and back from properties to attributes): `Polymer.PropertiesMixin`
- call an observer when a custom element's property changes: `Polymer.PropertiesChanged`
- inject route parameters into the inline route templates: `Polymer.Templatize`

The features of the Polymer 2 library that are not used anymore:
 - Polymer.PropertyEffects (via Polymer.Element): Was used for the 'value', 'reflectToAttribute' and 'observer' features of Polymer Element's properties. Now this is done manually based on the Polymer.Properties mixin.
 - Polymer.TemplateStamp (via Polymer.Element): Was used to create the shadow DOM of the vaadin-router-link element, bind data and event handler based on a template. Now this is done manually directly through the browser APIs.

Bundle size change
 - for polymer apps: +0.95 kB (8.61 kB -> 9.56 kB)
 - for non-polymer apps: -4.2 kB (57.7 kB -> 53.3 kB)

--- a/vaadin-router-link.html
+++ b/vaadin-router-link.html
@@ -4,86 +4,117 @@ Copyright (c) 2018 Vaadin Ltd.
 This program is available under Apache License Version 2.0, available at https://vaadin.com/license/
 -->
 
-<link rel="import" href="../polymer/polymer-element.html">
+<link rel="import" href="../polymer/lib/mixins/properties-mixin.html">
 <link rel="import" href="vaadin-router-mixin.html">
 
-<dom-module id="vaadin-router-link">
-  <template>
-    <style>
-      :host {
-        display: inline;
-        text-decoration: underline;
+<template>
+  <style>
+    :host {
+      text-decoration: underline;
+    }
+
+    :host([hidden]) {
+      display: none !important;
+    }
+
+    a {
+      color: inherit;
+      text-decoration: inherit;
+    }
+  </style>
+  
+  <a id="anchor">
+    <slot></slot>
+  </a>
+</template>
+
+<script>
+  (function() {
+    const template = document.currentScript.ownerDocument.querySelector('template');
+
+    /**
+      * @memberof Vaadin
+      */
+    class VaadinRouterLink extends Vaadin.RouterMixin(Polymer.PropertiesMixin(HTMLElement)) {
+      static get is() {
+        return 'vaadin-router-link';
       }
 
-      :host([hidden]) {
-        display: none !important;
+      static get properties() {
+        return {
+          href: String,
+          active: Boolean
+        };
       }
 
-      a {
-        color: inherit;
-        text-decoration: inherit;
-      }
-    </style>
-    
-    <a href$="[[href]]" on-click="_onClick">
-      <slot></slot>
-    </a>
-  </template>
+      connectedCallback() {
+        super.connectedCallback();
+        this._onActiveCriteriaChanged();
 
-  <script>
-    (function() {
-      /**
-       * `<vaadin-router-link>` is a Polymer 2 element.
-       *
-       * ```
-       * <vaadin-router-link></vaadin-router-link>
-       * ```
-       *
-       * @memberof Vaadin
-       */
-      class VaadinRouterLink extends Vaadin.RouterMixin(Polymer.Element) {
-        static get is() {
-          return 'vaadin-router-link';
-        }
-
-        static get properties() {
-          return {
-            href: {
-              type: String
-            },
-            active: {
-              type: Boolean,
-              value: false,
-              notify: true,
-              reflectToAttribute: true
-            }
-          };
-        }
-
-        static get observers() {
-          return [
-            '_activeRouteChanged(router.pathname, href)',
-          ];
-        }
-
-        _activeRouteChanged() {
-          this.active = this.router.pathname === this.href;
-        }
-
-        _onClick(event) {
-          event.preventDefault();
-          window.history.pushState(null, document.title, this.href);
-          window.dispatchEvent(new PopStateEvent('popstate', {state: null}));
-        }
+        this.attachShadow({mode: 'open'})
+          .appendChild(template.content.cloneNode(true));
+        this._anchor = this.shadowRoot.querySelector('#anchor');
+        this._anchor.setAttribute('href', this.href);
+        this._anchor.addEventListener('click', this._onClick.bind(this));
       }
 
-      customElements.define(VaadinRouterLink.is, VaadinRouterLink);
+      disconnectedCallback() {
+        super.disconnectedCallback();
+      }
 
       /**
-       * @namespace Vaadin
-       */
-      window.Vaadin = window.Vaadin || {};
-      Vaadin.VaadinRouterLink = VaadinRouterLink;
-    })();
-  </script>
-</dom-module>
+        * Callback called when any properties with accessors created via
+        * `_createPropertyAccessor` have been set.
+        *
+        * @param {!Object} currentProps Bag of all current accessor values
+        * @param {!Object} changedProps Bag of properties changed since the last
+        *   call to `_propertiesChanged`
+        * @param {!Object} oldProps Bag of previous values for each property
+        *   in `changedProps`
+        * @return {void}
+        * @protected
+        */
+      _propertiesChanged(currentProps, changedProps, oldProps) {
+        super._propertiesChanged(currentProps, changedProps, oldProps);
+
+        if ('href' in changedProps) {
+          this._onHrefChanged(currentProps.href, oldProps.href);
+          this._onActiveCriteriaChanged();
+        }
+
+        if ('active' in changedProps) {
+          this._propertyToAttribute('active');
+        }
+      }
+
+      _onPopstate(event) {
+        super._onPopstate();
+        this._onActiveCriteriaChanged();
+      }
+
+      _onHrefChanged(newValue, oldValue) {
+        if (this._anchor && newValue != oldValue) {
+          this._anchor.setAttribute('href', newValue);
+        }
+      }
+
+      _onActiveCriteriaChanged() {
+        this.active = this.router && this.router.pathname === this.href;
+      }
+
+      _onClick(event) {
+        event.preventDefault();
+        window.history.pushState(null, document.title, this.href);
+        window.dispatchEvent(new PopStateEvent('popstate', {state: null}));
+      }
+    }
+
+    customElements.define(VaadinRouterLink.is, VaadinRouterLink);
+
+    /**
+      * @namespace Vaadin
+      */
+    window.Vaadin = window.Vaadin || {};
+    Vaadin.VaadinRouterLink = VaadinRouterLink;
+  })();
+</script>
