--- a/vaadin-router-mixin.html
+++ b/vaadin-router-mixin.html
@@ -14,22 +14,20 @@ This program is available under Apache License Version 2.0, available at https:/
   Vaadin.RouterMixin = superClass => class VaadinRouterMixin extends superClass {
     static get properties() {
       return {
-        router: {
-          type: Object,
-          value: () => ({
-            pathname: window.location.pathname
-          })
-        }
+        router: Object
       };
     }
 
     constructor() {
       super();
-      this.__popstateListener = this.__onPopstate.bind(this);
+      this.__popstateListener = this._onPopstate.bind(this);
     }
 
     connectedCallback() {
       super.connectedCallback();
+      
+      this.router = {};
+      this._onPopstate();
       window.addEventListener('popstate', this.__popstateListener);
     }
 
@@ -38,8 +36,12 @@ This program is available under Apache License Version 2.0, available at https:/
       super.disconnectedCallback();
     }
 
-    __onPopstate(event) {
-      this.set('router.pathname', window.location.pathname);
+    _onPopstate(event) {
+      if (this.set) {
+        this.set('router.pathname', window.location.pathname)
+      } else {
+        this.router.pathname = window.location.pathname;
+      }
     }
   };
 })();
