--- a/vaadin-router-link.html
+++ b/vaadin-router-link.html
@@ -33,16 +33,35 @@ This program is available under Apache License Version 2.0, available at https:/
     const template = document.currentScript.ownerDocument.querySelector('template');
 
     /**
-      * @memberof Vaadin
-      */
-    class VaadinRouterLink extends Vaadin.RouterMixin(Polymer.PropertiesMixin(HTMLElement)) {
+     * `<vaadin-router-link>` is a Web Component that defines an in-app link. It is similar to
+     * an `<a>` tag but changes the URL without reloading the browser page. It uses the HTML5
+     * History API.
+     *
+     * ```
+     * <vaadin-router-link href="/users/sam">See Sam's profile</vaadin-router-link>
+     * ```
+     *
+     * @polymer
+     * @customElement
+     * @memberof Vaadin
+     * @appliesMixin Vaadin.RouterMixin
+     * @appliesMixin Polymer.PropertiesMixin
+     */
+    class RouterLinkElement extends Vaadin.RouterMixin(Polymer.PropertiesMixin(HTMLElement)) {
       static get is() {
         return 'vaadin-router-link';
       }
 
       static get properties() {
         return {
+          /** Contains a URL or a URL fragment that the link points to */
           href: String,
+
+          /**
+           * Whether or not the route this link points to is currently active.
+           * 
+           * (reflected to the `active` attribute)
+           */
           active: Boolean
         };
       }
@@ -63,17 +82,19 @@ This program is available under Apache License Version 2.0, available at https:/
       }
 
       /**
-        * Callback called when any properties with accessors created via
-        * `_createPropertyAccessor` have been set.
-        *
-        * @param {!Object} currentProps Bag of all current accessor values
-        * @param {!Object} changedProps Bag of properties changed since the last
-        *   call to `_propertiesChanged`
-        * @param {!Object} oldProps Bag of previous values for each property
-        *   in `changedProps`
-        * @return {void}
-        * @protected
-        */
+       * (override of `Polymer.PropertiesChanged._propertiesChanged)
+       * 
+       * Callback called when any properties with accessors created via
+       * `_createPropertyAccessor` have been set.
+       *
+       * @param {!Object} currentProps Bag of all current accessor values
+       * @param {!Object} changedProps Bag of properties changed since the last
+       *   call to `_propertiesChanged`
+       * @param {!Object} oldProps Bag of previous values for each property
+       *   in `changedProps`
+       * @return {void}
+       * @protected
+       */
       _propertiesChanged(currentProps, changedProps, oldProps) {
         super._propertiesChanged(currentProps, changedProps, oldProps);
 
@@ -109,12 +130,12 @@ This program is available under Apache License Version 2.0, available at https:/
       }
     }
 
-    customElements.define(VaadinRouterLink.is, VaadinRouterLink);
+    customElements.define(RouterLinkElement.is, RouterLinkElement);
 
     /**
       * @namespace Vaadin
       */
     window.Vaadin = window.Vaadin || {};
-    Vaadin.VaadinRouterLink = VaadinRouterLink;
+    Vaadin.RouterLinkElement = RouterLinkElement;
   })();
 </script>
