--- a/vaadin-router-link.html
+++ b/vaadin-router-link.html
@@ -4,86 +4,138 @@ Copyright (c) 2018 Vaadin Ltd.
 This program is available under Apache License Version 2.0, available at https://vaadin.com/license/
 -->
 
-<link rel="import" href="../polymer/polymer-element.html">
+<link rel="import" href="../polymer/lib/mixins/properties-mixin.html">
 <link rel="import" href="vaadin-router-mixin.html">
 
-<dom-module id="vaadin-router-link">
-  <template>
-    <style>
-      :host {
-        display: inline;
-        text-decoration: underline;
+<template>
+  <style>
+    :host {
+      text-decoration: underline;
+    }
+
+    :host([hidden]) {
+      display: none !important;
+    }
+
+    a {
+      color: inherit;
+      text-decoration: inherit;
+    }
+  </style>
+  
+  <a id="anchor">
+    <slot></slot>
+  </a>
+</template>
+
+<script>
+  (function() {
+    const template = document.currentScript.ownerDocument.querySelector('template');
+
+    /**
+     * `<vaadin-router-link>` is a Web Component that defines an in-app link. It is similar to
+     * an `<a>` tag but changes the URL without reloading the browser page. It uses the HTML5
+     * History API.
+     *
+     * ```
+     * <vaadin-router-link href="/users/sam">See Sam's profile</vaadin-router-link>
+     * ```
+     *
+     * @polymer
+     * @customElement
+     * @memberof Vaadin
+     * @appliesMixin Vaadin.RouterMixin
+     * @appliesMixin Polymer.PropertiesMixin
+     */
+    class RouterLinkElement extends Vaadin.RouterMixin(Polymer.PropertiesMixin(HTMLElement)) {
+      static get is() {
+        return 'vaadin-router-link';
       }
 
-      :host([hidden]) {
-        display: none !important;
+      static get properties() {
+        return {
+          /** Contains a URL or a URL fragment that the link points to */
+          href: String,
+
+          /**
+           * Whether or not the route this link points to is currently active.
+           * 
+           * (reflected to the `active` attribute)
+           */
+          active: Boolean
+        };
       }
 
-      a {
-        color: inherit;
-        text-decoration: inherit;
-      }
-    </style>
-    
-    <a href$="[[href]]" on-click="_onClick">
-      <slot></slot>
-    </a>
-  </template>
+      connectedCallback() {
+        super.connectedCallback();
+        this._onActiveCriteriaChanged();
 
-  <script>
-    (function() {
+        this.attachShadow({mode: 'open'})
+          .appendChild(template.content.cloneNode(true));
+        this._anchor = this.shadowRoot.querySelector('#anchor');
+        this._anchor.setAttribute('href', this.href);
+        this._anchor.addEventListener('click', this._onClick.bind(this));
+      }
+
+      disconnectedCallback() {
+        super.disconnectedCallback();
+      }
+
       /**
-       * `<vaadin-router-link>` is a Polymer 2 element.
+       * (override of `Polymer.PropertiesChanged._propertiesChanged)
+       * 
+       * Callback called when any properties with accessors created via
+       * `_createPropertyAccessor` have been set.
        *
-       * ```
-       * <vaadin-router-link></vaadin-router-link>
-       * ```
-       *
-       * @memberof Vaadin
+       * @param {!Object} currentProps Bag of all current accessor values
+       * @param {!Object} changedProps Bag of properties changed since the last
+       *   call to `_propertiesChanged`
+       * @param {!Object} oldProps Bag of previous values for each property
+       *   in `changedProps`
+       * @return {void}
+       * @protected
        */
-      class VaadinRouterLink extends Vaadin.RouterMixin(Polymer.Element) {
-        static get is() {
-          return 'vaadin-router-link';
+      _propertiesChanged(currentProps, changedProps, oldProps) {
+        super._propertiesChanged(currentProps, changedProps, oldProps);
+
+        if ('href' in changedProps) {
+          this._onHrefChanged(currentProps.href, oldProps.href);
+          this._onActiveCriteriaChanged();
         }
 
-        static get properties() {
-          return {
-            href: {
-              type: String
-            },
-            active: {
-              type: Boolean,
-              value: false,
-              notify: true,
-              reflectToAttribute: true
-            }
-          };
-        }
-
-        static get observers() {
-          return [
-            '_activeRouteChanged(router.pathname, href)',
-          ];
-        }
-
-        _activeRouteChanged() {
-          this.active = this.router.pathname === this.href;
-        }
-
-        _onClick(event) {
-          event.preventDefault();
-          window.history.pushState(null, document.title, this.href);
-          window.dispatchEvent(new PopStateEvent('popstate', {state: null}));
+        if ('active' in changedProps) {
+          this._propertyToAttribute('active');
         }
       }
 
-      customElements.define(VaadinRouterLink.is, VaadinRouterLink);
+      _onPopstate(event) {
+        super._onPopstate();
+        this._onActiveCriteriaChanged();
+      }
 
-      /**
-       * @namespace Vaadin
-       */
-      window.Vaadin = window.Vaadin || {};
-      Vaadin.VaadinRouterLink = VaadinRouterLink;
-    })();
-  </script>
-</dom-module>
+      _onHrefChanged(newValue, oldValue) {
+        if (this._anchor && newValue != oldValue) {
+          this._anchor.setAttribute('href', newValue);
+        }
+      }
+
+      _onActiveCriteriaChanged() {
+        this.active = this.router && this.router.pathname === this.href;
+      }
+
+      _onClick(event) {
+        event.preventDefault();
+        window.history.pushState(null, document.title, this.href);
+        window.dispatchEvent(new PopStateEvent('popstate', {state: null}));
+      }
+    }
+
+    customElements.define(RouterLinkElement.is, RouterLinkElement);
+
+    /**
+      * @namespace Vaadin
+      */
+    window.Vaadin = window.Vaadin || {};
+    Vaadin.RouterLinkElement = RouterLinkElement;
+  })();
+</script>
