--- a/vaadin-router-mixin.html
+++ b/vaadin-router-mixin.html
@@ -6,30 +6,50 @@ This program is available under Apache License Version 2.0, available at https:/
 
 <script>
 (() => {
+  /**
+   * @namespace Vaadin
+   */
   window.Vaadin = window.Vaadin || {};
 
   /**
-   * @polymerMixin
+   * Subscribes an element to the 'popstate' event on the current window, and
+   * injects the `router` property (a reference to the Vaadin Router).
+   * 
+   * The users of this mixin should override the `_onPopstate` method to
+   * handle the event. Remember to call `super._onPopstate` in the override:
+   * ```
+   * _onPopstate(event) {
+   *   super._onPopstate(event);
+   * 
+   *   // do your stuff here
+   * }
+   * ```
+   * 
+   * @polymer
+   * @mixinFunction
    */
-  Vaadin.RouterMixin = superClass => class VaadinRouterMixin extends superClass {
+  Vaadin.RouterMixin = superClass => class extends superClass {
     static get properties() {
       return {
-        router: {
-          type: Object,
-          value: () => ({
-            pathname: window.location.pathname
-          })
-        }
+        /**
+         * Exposes the current path of the Vaadin Router
+         *
+         * @type {{pathname: string}}
+         */
+        router: Object
       };
     }
 
     constructor() {
       super();
-      this.__popstateListener = this.__onPopstate.bind(this);
+      this.__popstateListener = this._onPopstate.bind(this);
     }
 
     connectedCallback() {
       super.connectedCallback();
+      
+      this.router = {};
+      this._onPopstate();
       window.addEventListener('popstate', this.__popstateListener);
     }
 
@@ -38,8 +58,19 @@ This program is available under Apache License Version 2.0, available at https:/
       super.disconnectedCallback();
     }
 
-    __onPopstate(event) {
-      this.set('router.pathname', window.location.pathname);
+    /**
+     * Callback called when the 'popstate' event is triggered on the window.
+     *
+     * @param {!Object} event the popstate event
+     * @return {void}
+     * @protected
+     */
+    _onPopstate(event) {
+      if (this.set) {
+        this.set('router.pathname', window.location.pathname)
+      } else {
+        this.router.pathname = window.location.pathname;
+      }
     }
   };
 })();
