--- a/vaadin-router.html
+++ b/vaadin-router.html
@@ -4,53 +4,40 @@ Copyright (c) 2018 Vaadin Ltd.
 This program is available under Apache License Version 2.0, available at https://vaadin.com/license/
 -->
 
-<link rel="import" href="../polymer/polymer-element.html">
+<script>
+  (function() {
 
-<dom-module id="vaadin-router">
-  <template>
-    <style>
-      :host {
-        display: inline-block;
+    /**
+     * `<vaadin-router>` is a Web Component that renders different content for different URLs. This
+     * enables client-side routing. Each content alternative is defined with a `<vaadin-route>` component:
+     *
+     * ```
+     * <vaadin-router>
+     *   <vaadin-route path="/users">
+     *     <x-user-list></x-user-list>
+     *   </vaadin-route>
+     *   <vaadin-route path="/users/:user">
+     *     <x-user-profile></x-user-profile>
+     *   </vaadin-route>
+     * </vaadin-router>
+     * ```
+     * 
+     * @customElement
+     * @memberof Vaadin
+     * @demo demo/
+     */
+    class RouterElement extends HTMLElement {
+      static get is() {
+        return 'vaadin-router';
       }
+    }
 
-      :host([hidden]) {
-        display: none !important;
-      }
-    </style>
-    <slot></slot>
-  </template>
+    customElements.define(RouterElement.is, RouterElement);
 
-  <script>
-    (function() {
-
-      /**
-       * `<vaadin-router>` is a Polymer 2 element.
-       *
-       * ```
-       * <vaadin-router></vaadin-router>
-       * ```
-       *
-       * @memberof Vaadin
-       * @demo demo/
-       */
-      class VaadinRouter extends Polymer.Element {
-        static get is() {
-          return 'vaadin-router';
-        }
-
-        static get properties() {
-          return {
-          };
-        }
-      }
-
-      customElements.define(VaadinRouter.is, VaadinRouter);
-
-      /**
-       * @namespace Vaadin
-       */
-      window.Vaadin = window.Vaadin || {};
-      Vaadin.VaadinRouter = VaadinRouter;
-    })();
-  </script>
-</dom-module>
+    /**
+     * @namespace Vaadin
+     */
+    window.Vaadin = window.Vaadin || {};
+    Vaadin.RouterElement = RouterElement;
+  })();
+</script>
