--- a/vaadin-router-link.html
+++ b/vaadin-router-link.html
@@ -7,7 +7,7 @@ This program is available under Apache License Version 2.0, available at https:/
 <link rel="import" href="../polymer/lib/mixins/properties-mixin.html">
 <link rel="import" href="vaadin-router-mixin.html">
 
-<template>
+<template id="vaadin-router-link-sd-template">
   <style>
     :host {
       text-decoration: underline;
@@ -30,7 +30,7 @@ This program is available under Apache License Version 2.0, available at https:/
 
 <script>
   (function() {
-    const template = document.currentScript.ownerDocument.querySelector('template');
+    const template = document.currentScript.ownerDocument.querySelector('#vaadin-router-link-sd-template');
 
     /**
      * `<vaadin-router-link>` is a Web Component that defines an in-app link. It is similar to
