--- a/demo/demo-shell.html
+++ b/demo/demo-shell.html
@@ -9,3 +9,7 @@
 <link rel="import" href="../vaadin-router.html">
 <link rel="import" href="../vaadin-route.html">
 <link rel="import" href="../vaadin-router-link.html">
+
+<link rel="import" href="demo-elements/x-home-view.html">
+<link rel="import" href="demo-elements/x-user-list.html">
+<link rel="import" href="demo-elements/x-user-profile.html">
