--- a/demo/element-basic-demos.html
+++ b/demo/element-basic-demos.html
@@ -11,12 +11,13 @@
     <p>Use <code>&lt;vaadin-router-link&gt;</code> to create HTML5 links that change the browser URL
       without page reload and <code>&lt;vaadin-route&gt;</code> to define what should be rendered for
       a given route. Wrap all routes into a <code>&lt;vaadin-router&gt;</code> element.</p>
+    <p>The content of a route can be defined as an inline template or with the <code>component</code>
+      property of a <code>&lt;vaadin-route&gt;</code> element.</p>
     <vaadin-demo-snippet id="element-basic-demos-basic" iframe-src="iframe.html">
       <template preserve-content>
         <nav>
           <vaadin-router-link href="/">Home</vaadin-router-link>
-          <vaadin-router-link href="/about">About</vaadin-router-link>
-          <vaadin-router-link href="/topics">Topics</vaadin-router-link>
+          <vaadin-router-link href="/users">Users</vaadin-router-link>
         </nav>
         <vaadin-router>
           <vaadin-route path="/">
@@ -24,16 +25,7 @@
               <h1>Home</h1>
             </template>
           </vaadin-route>
-          <vaadin-route path="/about">
-            <template>
-              <h1>About</h1>
-            </template>
-          </vaadin-route>
-          <vaadin-route path="/topics">
-            <template>
-              <h1>Topics</h1>
-            </template>
-          </vaadin-route>
+          <vaadin-route path="/users" component="x-user-list"></vaadin-route>
         </vaadin-router>
       </template>
     </vaadin-demo-snippet>
@@ -52,37 +44,28 @@
         </style>
         <nav>
           <vaadin-router-link href="/">Home</vaadin-router-link>
-          <vaadin-router-link href="/about">About</vaadin-router-link>
+          <vaadin-router-link href="/users">Users</vaadin-router-link>
         </nav>
         <vaadin-router>
-          <vaadin-route path="/">
-            <template>
-              <h1>Home</h1>
-            </template>
-          </vaadin-route>
-          <vaadin-route path="/about">
-            <template>
-              <h1>About</h1>
-            </template>
-          </vaadin-route>
+          <vaadin-route path="/" component="x-home-view"></vaadin-route>
+          <vaadin-route path="/users" component="x-user-list"></vaadin-route>
         </vaadin-router>
       </template>
     </vaadin-demo-snippet>
 
     <h3>Route parameters</h3>
+    <p>A route path definition can include one or more parameters. They are bound to the route
+      component properties when it gets rendered.</p>
     <vaadin-demo-snippet id="element-basic-demos-parameters" iframe-src="iframe.html">
       <template preserve-content>
         <nav>
-          <vaadin-router-link href="/sam">Sam</vaadin-router-link>
-          <vaadin-router-link href="/jane">Jane</vaadin-router-link>
-          <vaadin-router-link href="/kim">Kim</vaadin-router-link>
+          <vaadin-router-link href="/">Home</vaadin-router-link>
+          <vaadin-router-link href="/users/kim">Kim</vaadin-router-link>
+          <vaadin-router-link href="/users/jane">Jane</vaadin-router-link>
         </nav>
         <vaadin-router>
-          <vaadin-route path="/:name">
-            <template>
-              <p>Name: [[name]]</p>
-            </template>
-          </vaadin-route>
+          <vaadin-route path="/" component="x-home-view"></vaadin-route>
+          <vaadin-route path="/users/:user" component="x-user-profile"></vaadin-route>
         </vaadin-router>
       </template>
     </vaadin-demo-snippet>
