--- a/demo/route-parameters-demos.html
+++ b/demo/route-parameters-demos.html
@@ -37,6 +37,7 @@
               id: [[message]], author: [[user]]
             </template>
           </vaadin-route>
+          <vaadin-route path="/" component="x-home-view"></vaadin-route>
         </vaadin-router>
       </template>
     </vaadin-demo-snippet>
@@ -63,6 +64,7 @@
               <div class="image" style$="width: [[size]]px; height: [[size]]px; background: [[color]];"></div>
             </template>
           </vaadin-route>
+          <vaadin-route path="/" component="x-home-view"></vaadin-route>
         </vaadin-router>
       </template>
     </vaadin-demo-snippet>
@@ -81,6 +83,7 @@
               <p>You are viewing the '[[kbPath]]' section of the Knowlegde Base</p>
             </template>
           </vaadin-route>
+          <vaadin-route path="/" component="x-home-view"></vaadin-route>
         </vaadin-router>
       </template>
     </vaadin-demo-snippet>
